--- a/smart-exchange-frnt/src/app/cliente/datos-personales/datos-personales.component.sass
+++ b/smart-exchange-frnt/src/app/cliente/datos-personales/datos-personales.component.sass
@@ -1,2 +1,8 @@
 .datos-personales-card
     text-align: center
+mat-form-field
+    margin-bottom: -1.3em
+mat-card-subtitle
+    @media (max-width: 700px)
+        display: none
+        font-size: 0.8em
