--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -212,3 +212,28 @@ mat-form-field, mat-slide-toggle
     background: #686967 !important
 .op-est-finalizado
     background: #1f8b4c !important
+@media (max-width: 1000px)
+    .contenido-general
+        width: 80%
+@media (max-width: 700px)
+    .datos-personales-dialog
+        width: 100% !important
+        max-width: none !important
+    .contenido-general
+        width: 95%
+    .compra-venta
+        font-size: 0.8em
+    .envio div, .recibo div
+        padding-bottom: 0.5em
+@media (max-width: 650px)
+    .operacion-dialog
+        width: 100% !important
+        max-width: none !important
+@media (max-width: 500px)
+    .contenido-general
+        width: 100%
+        padding: 0.2em
+    .operacion-dialog
+        width: 100% !important
+        max-width: none !important
+
