--- a/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.sass
+++ b/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.sass
@@ -36,3 +36,9 @@
     width: 80%
     margin: auto
     text-align: center
+@media (max-width: 750px)
+    .select-cuenta
+        width: 15em
+@media (max-width: 680px)
+    .select-cuenta, .select-banco
+        width: 100%
