--- a/smart-exchange-frnt/src/app/principal/principal.component.html
+++ b/smart-exchange-frnt/src/app/principal/principal.component.html
@@ -13,6 +13,7 @@
         <button routerLink="/operaciones/principal" mat-button color="primary" class="elemento menu-texto"><b>Operaciones</b></button>
         <button routerLink="/operaciones/tipo-cambio" mat-button color="primary" class="elemento menu-texto"><b>Tipos de cambio</b></button>
         <button routerLink="/operaciones/cuentas-bancarias" mat-button color="primary" class="elemento menu-texto"><b>Cuentas bancarias</b></button>
+        <button routerLink="/operaciones/bancos" mat-button color="primary" class="elemento menu-texto"><b>Bancos</b></button>
         <button routerLink="/operaciones/clientes/todo" mat-button color="primary" class="elemento menu-texto"><b>Clientes</b></button>
         <button routerLink="/operaciones/empresa" mat-button color="primary" class="elemento menu-texto"><b>Empresa</b></button>
     </span>
@@ -49,6 +50,7 @@
                 <button routerLink="/operaciones/principal" mat-menu-item><span>Operaciones</span></button>
                 <button routerLink="/operaciones/tipo-cambio" mat-menu-item><span>Tipos de cambio</span></button>
                 <button routerLink="/operaciones/cuentas-bancarias" mat-menu-item><span>Cuentas bancarias</span></button>
+                <button routerLink="/operaciones/bancos" mat-menu-item><span>Bancos</span></button>
                 <button routerLink="/operaciones/clientes/todo" mat-menu-item><span>Clientes</span></button>
                 <button routerLink="/operaciones/empresa" mat-menu-item><span>Empresa</span></button>
             </span>
