--- a/smart-exchange-frnt/src/app/cliente/lista-cuentas-bancarias/lista-cuentas-bancarias.component.html
+++ b/smart-exchange-frnt/src/app/cliente/lista-cuentas-bancarias/lista-cuentas-bancarias.component.html
@@ -5,7 +5,8 @@
       Agregar cuentas
     </button>
     <br>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource">
         <ng-container matColumnDef="tipoCuenta">
           <th mat-header-cell *matHeaderCellDef> Tipo cuenta </th>
           <td mat-cell *matCellDef="let item"> {{buscarNombreDeTipoCuenta(item.tipoCuenta)}} </td>
@@ -37,7 +38,7 @@
         <ng-container matColumnDef="opciones">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let item">
-                <button mat-mini-fab color="accent">
+                <button (click)="editar(item)" mat-mini-fab color="accent">
                     <mat-icon>edit</mat-icon>
                 </button>
             </td>
@@ -45,5 +46,8 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+      <mat-paginator [pageSizeOptions]="[5,10]" showFirstLastButtons>
+      </mat-paginator>
       <mat-progress-bar *ngIf="estaCargando" mode="indeterminate"></mat-progress-bar>
+    </div>
 </div>
