--- a/smart-exchange-frnt/src/app/login/login.component.sass
+++ b/smart-exchange-frnt/src/app/login/login.component.sass
@@ -1,1 +1,37 @@
-
+.loging-contenido3
+    display: flex
+    align-items: center
+    justify-content: space-between
+    height: 100vh
+.izquierdo3, .derecho3
+    flex: 1
+.loging-for3
+    padding: 1em
+    margin: auto
+    text-align: center
+    mat-form-field
+        width: 80%
+h4
+    font-weight: bold
+.derecho3
+    height: 100vh
+    display: flex
+    align-items: center
+    justify-content: space-between
+    background: rgb(32,181,152)
+    background: -moz-linear-gradient(63deg, rgba(32,181,152,1) 0%, rgba(6,162,201,1) 43%, rgba(1,157,214,1) 100%)
+    background: -webkit-linear-gradient(63deg, rgba(32,181,152,1) 0%, rgba(6,162,201,1) 43%, rgba(1,157,214,1) 100%)
+    background: linear-gradient(63deg, rgba(32,181,152,1) 0%, rgba(6,162,201,1) 43%, rgba(1,157,214,1) 100%)
+.contenido-der3
+    padding: 1em
+    box-sizing: border-box
+    width: 80%
+    margin: auto
+    text-align: center
+    color: #ffffff
+    font-size: 1.7em
+    .logo-log-reg3
+        width: 30%
+        margin: auto
+        img
+            width: 100%
