--- a/smart-exchange-frnt/src/app/login/login.component.html
+++ b/smart-exchange-frnt/src/app/login/login.component.html
@@ -1,6 +1,9 @@
 <div class="loging-contenido3">
         <div class="izquierdo3">
             <div class="loging-for3">
+                <div class="primero logo-log-reg3">
+                    <img src='assets/img/logo.png' alt="">
+                </div><br><br>
                  <h4 class="mat-primary">INICIE SESIÓN</h4>
                 <form [formGroup]="loginForm" (ngSubmit)="login()" autocomplete="off">
                     <mat-form-field appearance="outline">
@@ -37,10 +40,12 @@
                 <img src='assets/img/logofooter.png' alt="">
             </div>
             <br>
-          <div class="lista-pasos">La mejor tasa de cambio, donde sea que estés en solo tres pasos: </div>
-          <div class="lista-pasos"><div class="numero">1. </div> <span>Registrate en nuesto portal web o descarga nuestra app</span></div>
-          <div class="lista-pasos"><div class="numero">2. </div> <span>Registra una operación de cambio con a la mejor tasa de cambio</span></div>
-          <div class="lista-pasos"><div class="numero">3. </div> <span>Transfiere el monto del cambio a nuestras cuentas, recibe el cambio en tu cuenta</span></div>
+            <div class="contenedor-carrusel">
+                <div class="lista-pasos">La mejor tasa de cambio, donde sea que estés en solo tres pasos: </div>
+                <div class="lista-pasos">1. Registrate en nuesto portal web o descarga nuestra app</div>
+                <div class="lista-pasos">2. Registra una operación de cambio con a la mejor tasa de cambio</div>
+                <div class="lista-pasos">3. Transfiere el monto del cambio a nuestras cuentas, recibe el cambio en tu cuenta</div>
+            </div>            
         </div>
     </div>
 </div>
