--- a/smart-exchange-frnt/src/app/login/login.component.sass
+++ b/smart-exchange-frnt/src/app/login/login.component.sass
@@ -33,5 +33,51 @@ h4
     .logo-log-reg3
         width: 30%
         margin: auto
+        transition: width 0.3s ease
         img
             width: 100%
+    .logo-log-reg3:hover
+        width: 32%
+        transition: width 0.3s ease
+.contenedor-carrusel
+    display: flex
+    flex-direction: column
+    overflow: hidden
+    position: relative
+    height: 3em
+.lista-pasos
+    opacity: 0
+    position: absolute
+    width: 100%
+    animation: deslizar 16s linear infinite
+.lista-pasos:nth-child(1)
+    animation-delay: 0s
+.lista-pasos:nth-child(2)
+    animation-delay: 4s
+.lista-pasos:nth-child(3)
+    animation-delay: 8s
+.lista-pasos:nth-child(4)
+    animation-delay: 12s
+.primero
+    display: none
+@keyframes deslizar
+    0%, 20%, 100%
+        opacity: 0
+        transform: translateY(100%)
+    25%, 45%
+        opacity: 1
+        transform: translateY(0)
+    50%, 70%
+        opacity: 0
+        transform: translateY(-100%)
+@media (max-width: 900px)
+    .contenido-der3
+        width: 95%
+@media (max-width: 700px)
+    .derecho3
+        display: none
+    .izquierdo3
+        width: 100%
+    .primero
+        display: inline
+        text-align: center
