--- a/smart-exchange-frnt/src/app/registrate/registrate.component.sass
+++ b/smart-exchange-frnt/src/app/registrate/registrate.component.sass
@@ -1,2 +1,84 @@
-mat-card
-    background: rgba(255, 255, 2555, 0.0)
+.loging-contenido3
+    display: flex
+    align-items: center
+    justify-content: space-between
+    height: 100vh
+.izquierdo3, .derecho3
+    flex: 1
+.loging-for3
+    padding: 1em
+    margin: auto
+    text-align: center
+    mat-form-field
+        width: 80%
+h4
+    font-weight: bold
+.derecho3
+    height: 100vh
+    display: flex
+    align-items: center
+    justify-content: space-between
+    background: rgb(32,181,152)
+    background: -moz-linear-gradient(63deg, rgba(32,181,152,1) 0%, rgba(6,162,201,1) 43%, rgba(1,157,214,1) 100%)
+    background: -webkit-linear-gradient(63deg, rgba(32,181,152,1) 0%, rgba(6,162,201,1) 43%, rgba(1,157,214,1) 100%)
+    background: linear-gradient(63deg, rgba(32,181,152,1) 0%, rgba(6,162,201,1) 43%, rgba(1,157,214,1) 100%)
+.contenido-der3
+    padding: 1em
+    box-sizing: border-box
+    width: 80%
+    margin: auto
+    text-align: center
+    color: #ffffff
+    font-size: 1.7em
+    .logo-log-reg3
+        width: 30%
+        margin: auto
+        transition: width 0.3s ease
+        img
+            width: 100%
+    .logo-log-reg3:hover
+        width: 32%
+        transition: width 0.3s ease
+.contenedor-carrusel
+    display: flex
+    flex-direction: column
+    overflow: hidden
+    position: relative
+    height: 3em
+.lista-pasos
+    opacity: 0
+    position: absolute
+    width: 100%
+    animation: deslizar 16s linear infinite
+.lista-pasos:nth-child(1)
+    animation-delay: 0s
+.lista-pasos:nth-child(2)
+    animation-delay: 4s
+.lista-pasos:nth-child(3)
+    animation-delay: 8s
+.lista-pasos:nth-child(4)
+    animation-delay: 12s
+.primero
+    display: none
+@keyframes deslizar
+    0%, 20%, 100%
+        opacity: 0
+        transform: translateY(100%)
+    25%, 45%
+        opacity: 1
+        transform: translateY(0)
+    50%, 70%
+        opacity: 0
+        transform: translateY(-100%)
+@media (max-width: 900px)
+    .contenido-der3
+        width: 95%
+@media (max-width: 700px)
+    .derecho3
+        display: none
+    .izquierdo3
+        width: 100%
+    .primero
+        display: inline
+        width: 40%
+        margin: auto
