--- a/smart-exchange-movil/src/app/explore-container/explore-container.component.html
+++ b/smart-exchange-movil/src/app/explore-container/explore-container.component.html
@@ -1,4 +1,26 @@
-<div id="container">
-  <strong>{{ name }}</strong>
-  <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+<div class="container">
+  <div class="logo">
+    <img src="./../../assets/img/logofooter.png" alt="">
+  </div>
+  <div class="info">
+    <small>Bienvenido</small><br>
+    <strong>correogmail.com</strong>
+  </div>
+    <ion-badge class="badage" color="danger">11</ion-badge>
+  <ion-fab slot="fixed" vertical="top" horizontal="end">
+    <ion-fab-button color="primary">
+      <ion-icon name="grid"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="bottom">
+      <ion-fab-button>
+        <ion-icon name="document"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="color-palette"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="globe"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 </div>
