--- a/smart-exchange-movil/src/app/cliente/cliente.page.scss
+++ b/smart-exchange-movil/src/app/cliente/cliente.page.scss
@@ -1,5 +1,6 @@
 .page{
-    --background: linear-gradient(63deg, rgb(45, 71, 175) 0%, rgba(6,162,201,1) 43%, rgba(32,181,152,1) 100%);
+    //--background: linear-gradient(63deg, rgb(45, 71, 175) 0%, rgba(6,162,201,1) 43%, rgba(32,181,152,1) 100%);
+    --background: #2d47af;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -8,7 +9,7 @@
     //#2d47af
 }
 .card {
-    background-color: rgb(245, 245, 245);
+    background-color: #f5f5f5;
     border-top-left-radius: 1.5em;
     border-top-right-radius: 1.5em;
     padding: 1em;
@@ -38,8 +39,8 @@
     border-top-right-radius: 1.5em;
     padding: 0.5em;
     width: 100%;
-    //background: #47be11;
-    background: linear-gradient(63deg, rgb(6, 187, 233) 0%, rgba(32,181,152,1) 45%);
+    background: #2d47af;
+    //background: linear-gradient(63deg, rgb(6, 187, 233) 0%, rgba(32,181,152,1) 45%);
     color: white;
     font-weight: bold;
 }
