--- a/smart-exchange-movil/src/app/explore-container/explore-container.component.html
+++ b/smart-exchange-movil/src/app/explore-container/explore-container.component.html
@@ -18,8 +18,8 @@
       <ion-fab-button>
         <ion-icon name="color-palette"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="globe"></ion-icon>
+      <ion-fab-button href="/login">
+        <ion-icon name="log-out"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
