--- a/smart-exchange-movil/src/app/login/login.page.html
+++ b/smart-exchange-movil/src/app/login/login.page.html
@@ -1,11 +1,18 @@
 <ion-content [fullscreen]="true" class="background">
   <div class="logo">
-    <img src='assets/img/logofooter.png' alt="">
+    <img src='assets/img/logo3.png' alt="">
   </div>
   <div class="formulario">
-    <h4 class="titulo">INICIE SESIÓN</h4> 
+    <h4 class="titulo">¡NOS ALEGRA VERTE!</h4> 
     <form  [formGroup]="loginForm" (ngSubmit)="login()">
       <ion-list>
+        <ion-item>
+          <ion-input formControlName="username" placeholder="correo@gmail.com"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input formControlName="password"  placeholder="Contraseña"></ion-input>
+        </ion-item>
+<!--         <br>
         <ion-item>
           <ion-input formControlName="username" labelPlacement="floating">
             <div slot="label">Correo/Usuario<ion-text color="danger">*</ion-text></div>
@@ -16,7 +23,7 @@
             <div slot="label">Contraseña <ion-text color="danger">*</ion-text></div>
             <ion-icon item-end slot="end" name="{{hide ?'eye-off-outline':'eye-outline'}}" (click)="hide=!hide"></ion-icon>
           </ion-input>
-        </ion-item>
+        </ion-item> -->
       </ion-list>
       <ion-button type="submit" expand="Block" shape="round">Iniciar sesión</ion-button>
       <ion-button type="reset" expand="Block" shape="round" color="secondary">Cancelar</ion-button>
